<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grocery Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="produce">Produce</string>
    <string name="meat">Meat</string>
    <string name="alcohol">Alcohol</string>
    <string name="dairy">Dairy</string>
    <string name="deli">Deli</string>
    <string name="bread">Bread</string>
    <string name="other">Other</string>
    <string name="total">Total</string>
    <string name="zero">0.00</string>
    <string name="catButton">Cat.</string>

    <string-array name="categories">
        <item>produce</item>
        <item>meat</item>
        <item>bread</item>
        <item>alcohol</item>
        <item>deli</item>
        <item>dairy</item>
        <item>frozen</item>
        <item>other</item>
        <item >snacks</item>
    </string-array>

    <string name="intZero">0</string>
    <string name="reset">Reset</string>
    <string name="title_activity_remove">Remove</string>
    <string name="remove">Remove</string>
    <string name="frozen">Frozen</string>
    <string name="title_activity_list">List</string>
    <string name="makeList">Modify Grocery List</string>
    <string name="snacks">Snacks</string>
    <string name="resetlist">Reset List</string>

</resources>
